--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,8 @@
       title="style"
       href="%PUBLIC_URL%/reset.css"
     />
-
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
     <title>M(-_(-_-)_-)E</title>
